# pcolorizer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: colorizer.h  concepts.h  genetic.h  smt.h  undirected_graph.h  utils.h
tests/: CMakeLists.txt
tests/genetic/: CMakeLists.txt  test_complete_graph.cu
tests/include/testing/: dimacs.h  generators.h
tests/meta/: CMakeLists.txt  test_complete_graph.cu
tests/smt/: CMakeLists.txt  test_complete_graphs.cpp  test_cycle_graphs.cpp  test_dimacs_graphs.cpp
